fix(basic-3.8): Separate selectors and properties with a line break in CSS

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 }
 
 @media (max-width: 768px) {
-.header { text-align: center;
+.header { 
+  text-align: center;
 }
 }
 .main {
@@ -38,10 +39,12 @@
     margin: 0;
     padding: 0px;
 }
-.list, .title {
+.list,
+.title {
     list-style: none;
 }
-.task, .button{
+.task,
+.button{
     outline: none;
 }
 .button {
@@ -117,17 +120,20 @@
 .task[type="text"] {
     width: 226px;
 }
-.button.button_delete .arrow {
+.button
+.arrow {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-.button.button_delete .arrow:hover {
+.button
+.arrow:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-.completed__task .list__label {
+.completed__task
+.list__label {
     text-decoration: line-through;
     color: #888;
 }
@@ -137,11 +143,13 @@
     display: none;
 }
 
-.list_edit-mode .list__input[type=text] {
+.list_edit-mode
+.list__input[type=text] {
     display: inline-block;
     width: 224px;
 }
 
-.list_edit-mode .list__label {
+.list_edit-mode
+.list__label {
     display: none;
 }
